# maidamai0.github.io

./: .clang-tidy  .gitignore  .gitmodules  .swp  CMakeLists.txt  Gemfile  README.md  _config.yml  _config.yml~  about.html  about.md~  archives.html  archives.md  archives.md~  config.toml  contact.md~  index.html  index.html~  index.xml  resume.md  resume_cn.md  test.drawio  vcpkg.json
_includes/: footer.html  footer.html~  head.html  head.html~  header.html  icon-github.html  icon-github.html~
_layouts/: default.html  default.html~  home.html  page.html  page.html~  post.html  post.html~
_posts/: 2016-03-28-test-blog.markdown  2016-03-28-test-blog.markdown~  2016-03-28-welcome-to-jekyll.markdown  2016-03-28-welcome-to-jekyll.markdown~  2016-03-28-welcome-to-jekyll.md~  2016-03-29-test1.md~  2016-03-29-测试markdown语法.md  2016-03-29-测试markdown语法.md~  2016-03-31-建站日记.md  2019-10-30-SSL.md  2019-11-14-qml-overview.md  2019-11-14-qml_overview.md  2019-12-04-Memory-leak-check-on-windows.md  2019-12-04-Memory_leak_check_on_windows.md  2020-01-13-crash-dump-analysis-with-windbg.md  2020-01-13-crash_dump_analysis_with_windbg.md  2020-02-11-Open-default-mail-client-on-windows.md  2020-02-11-Open_default_mail_client_on_windows.md  2020-05-21-video-files.md  2020-05-21-video_files.md  2020-05-27-fonts.md  2020-07-24-profiling-windows-app.md  2020-07-24-profiling_windows_app.md  2021-04-05-a simple-thread-pool.md
_sass/: _layout.scss  minima.scss
_sass/minima/: _base.scss
_site/: CNAME  README.md  index.html
archetypes/: default.md
categories/c++/: index.html
categories/encode/: index.xml
categories/network/: index.xml
categories/security/: index.xml
categories/windows/: index.html
code/: CMakeLists.txt  update_resource.py
code/alignment/: main.cpp
code/auto_test/: main.cpp
code/backtrace/: CMakeLists.txt  main.cpp
code/cache/: CMakeLists.txt  main.cpp
code/check_2d_point_in_polygon/: main.cpp  winding_number.h
code/compare_set_and_sort_unique_vector/: main.cpp
code/compile_time_string_hash/: main.cpp
code/constexpr_if/: main.cpp
code/cpp_extension_for_qml/: CMakeLists.txt  README.md  example.qml  example_qml_plugin.h  example_qml_plugin.pro  time_model.cpp  time_model.h
code/cpp_extension_for_qml/TimeModule/: example_qml_plugin.cpp  qmldir
code/create_qml_from_string/: CMakeLists.txt
code/destruction_order/: CMakeLists.txt
code/draggable_icons/: CMakeLists.txt  drag_widget.cpp  drag_widget.h
code/grab_image_in_qml/: CMakeLists.txt  main.cpp
code/integer/: CMakeLists.txt  main.cpp
code/json_message/: CMakeLists.txt  example.json  generate_cpp.py  main.cpp
code/mem_order/: CMakeLists.txt
code/mem_trace/: CMakeLists.txt  main.cpp
code/message_passing/: dispatcher.hpp  main.cpp  message_queue.hpp  receiver.hpp  sender.hpp  templated_dispatcher.hpp
code/open_default_mail_client_on_windows/: CMakeLists.txt  README.md  main.cpp  mapi.cpp  mapi.cxx  open_default_mail_client_cmd.cpp  open_default_mail_client_cmd.h  open_with_mapi.cpp  open_with_mapi.h
code/path_converter/: main.cpp
code/qml_gradient/: CMakeLists.txt
code/qml_image/: main.qml
code/qml_video/: CMakeLists.txt  main.qml
code/qpdfwriter/: CMakeLists.txt  main.cpp  qreport.cpp  qreport.h
code/qt_meta_object_system/: CMakeLists.txt  README.md  moc_test.cpp  test.h  test.hpp
code/qt_object/: CMakeLists.txt
code/qt_process/: CMakeLists.txt
code/qt_signal_custom_type/: CMakeLists.txt
code/qt_widgets_model_view_tutorial/: CMakeLists.txt  main.cpp  model.cpp
code/read_write_lock/: main.cpp
code/redirect_child_stdcout/: CMakeLists.txt  child.cpp  input.txt  parent.cpp
code/seekp/: main.cpp
code/single_producer_consumer_queue/: main.cpp  producer_consumer_queue.hpp
code/snapshot_test/: image_compare.hpp
code/spin_lock/: CMakeLists.txt  main.cpp
code/static_variable_in_non_static_member_function/: main.cpp
code/std_async/: CMakeLists.txt  main.cpp
code/std_thread/: main.cpp
code/string_view/: CMakeLists.txt  main.cpp
code/thread_safe_init_with_lambda/: CMakeLists.txt  main.cpp
code/unicode/: main.cpp
code/use_qt_private/: CMakeLists.txt  quick_item_snapshot.cpp  quick_item_snapshot.h
content/post/: Memory-leak-check-on-windows.md  Open-default-mail-client-on-windows.md  SSL.md  a simple-thread-pool.md  crash-dump-analysis-with-windbg.md  fonts.md  profiling-windows-app.md  qml-overview.md  video-files.md
css/: main.scss
docs/: 404.html  sitemap.xml
docs/categories/c++/: index.xml
docs/categories/concurrency/: index.html  index.xml
docs/categories/debug/: index.xml
docs/categories/design/: index.xml
docs/categories/desktop/: index.html  index.xml
docs/categories/encode/: index.html
docs/categories/multimedia/: index.html
docs/categories/windows/: index.xml
docs/post/: index.xml
docs/post/fonts/: index.html
docs/post/qml-overview/: index.html
docs/tags/: index.xml
docs/tags/c++/: index.xml
docs/tags/desktop/: index.html
docs/tags/dump/: index.html
docs/tags/font/: index.html  index.xml
docs/tags/mail/: index.xml
docs/tags/qt/: index.xml
docs/tags/ssl/: index.xml
docs/tags/thread-pool/: index.html  index.xml
docs/tags/video/: index.html
docs/tags/windbg/: index.xml
docs/tags/windows/: index.html  index.xml
post/profiling-windows-app/: index.html
post/video-files/: index.html
public/: index.html
public/categories/: index.html  index.xml
public/categories/debug/: index.html
public/categories/design/: index.html
public/categories/gui/: index.html  index.xml
public/categories/multimedia/: index.xml
public/categories/network/: index.html
public/categories/security/: index.html
public/page/2/: index.html
public/post/: index.html
public/post/a-simple-thread-pool/: index.html
public/post/crash-dump-analysis-with-windbg/: index.html
public/post/memory-leak-check-on-windows/: index.html
public/tags/: index.html
tags/mail/: index.html
tags/profiling/: index.html
tags/qml/: index.html
tags/video/: index.xml
uml/: qml.qmodel  qobject.qmodel
(+25 files in other folders)
